Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-48637

[System Test][CBM] backup task failed with error - timeout reached whilst waiting for manifest id xxx to have propagated throughout the cluster, waited 1m0s

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.1.0
    • 7.1.0
    • tools
    • Triaged
    • 1
    • No
    • Tools 2021 Nov

    Description

      7.1.0-1361

      Test:
      -test tests/integration/neo/test_neo_kv_gsi_coll_xdcr_backup_sgw_fts_itemct_txns_eventing_cbas_scale3_magma.yml -scope tests/integration/neo/scope_neo_with_backup_magma.yml
      Scale 3
      Iteration 1

      Backup task failed with error:

      172.23.123.28 : backup
      2021-09-27T17:00:45.839-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:00:55.839-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:01:05.839-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:01:15.839-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:01:25.840-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:01:35.840-07:00 WARN (Worker) No progress given by cbbackupmgr {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1"}
      2021-09-27T17:01:37.338-07:00 WARN (Worker) Task failed {"cluster": "self", "repositoryID": "my_repo", "state": "active", "taskName": "backup-1", "err": "exit status 1", "cbmErr": "exit status 1: failed to get backup transferable: failed to create backup: failed to get source collection manifest: failed to wait for manifest id 374: timeout reached whilst waiting for manifest id 176 to have propagated throughout the cluster, waited 1m0s"}
      

      Logs:
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.137.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.155.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.157.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.5.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.67.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.69.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.104.70.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.106.100.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.106.188.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.108.103.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.120.245.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.121.117.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.121.3.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.123.27.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.123.28.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.96.148.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.96.251.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.96.252.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.96.253.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.97.119.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.97.121.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.97.122.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.97.239.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.97.242.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.98.135.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.99.11.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.99.20.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.99.21.zip
      url : https://cb-jira.s3.us-east-2.amazonaws.com/logs/systestmon-1632789362/collectinfo-2021-09-28T003605-ns_1%40172.23.99.25.zip

      Attaching cbm logs

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              arunkumar Arunkumar Senthilnathan (Inactive)
              arunkumar Arunkumar Senthilnathan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty