MB-48637: Change PersistManifestTask from AuxIO to Writer

Collection's SET_MANIFEST command uses a I/O task to write the
current manifest before updating vbucket collection state. In
this MB the command had very long completion times because the
task runs on AuxIO and was delayed by backfill tasks (which
were abnormally slow themselves)

The task only writes to disk, and is relatively quick (not much
data to write), moving to the writer task will likely yield
a more predictable run time.

Change-Id: I56f29c01ac0dfa0d0ec4d65c80b1bf43c8113567
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/166359
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>