executor/tasks.def.h
@@ -56,7 +56,6 @@ TASK(Core_RbacReloadTask, READER_TASK_IDX, 0)
 
 // Aux IO tasks
 TASK(VBucketMemoryAndDiskDeletionTask, AUXIO_TASK_IDX, 0)
-TASK(PersistCollectionsManifest, AUXIO_TASK_IDX, 1)
 TASK(AccessScanner, AUXIO_TASK_IDX, 2)
 TASK(AccessScannerVisitor, AUXIO_TASK_IDX, 2)
 TASK(BackfillManagerTask, AUXIO_TASK_IDX, 4)
@@ -64,6 +63,7 @@ TASK(Core_SettingsReloadTask, AUXIO_TASK_IDX, 0)
 
 // Read/Write IO tasks
 TASK(RollbackTask, WRITER_TASK_IDX, 1)
+TASK(PersistCollectionsManifest, WRITER_TASK_IDX, 1)
 TASK(CompactVBucketTask, WRITER_TASK_IDX, 2)
 TASK(FlusherTask, WRITER_TASK_IDX, 5)
 TASK(StatSnap, WRITER_TASK_IDX, 9)
